# blog

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  banner.sh  config.ini  formula.tex  inline.tex  manage.py  pyproject.toml  requirements.txt  review.py  rss.py  rss.xml  tex2png.sh  web_crawlers.txt
configs/: nginx  systemd
raws/: 2023-07-02.md  2023-07-06.md  2023-07-13.ipynb  2023-07-16.md  2023-07-28.ipynb  2023-07-30.ipynb  2023-07-xx.ipynb  2023-08-15.md  2023-09-16.ipynb  2023-09-xx.ipynb  2023-10-01.md  2023-10-xx.md  2023-12-09.md  2024-09-28.md  2024-10-1x.md  2024-11-23.md  2024-11-xx.md
raws/media/: 2023-10-01.xlsx
tmp/: note.qmd
web/: about.md  main.py
web/articles/: 2023-07-02.md  2023-07-06.md  2023-07-13.md  2023-07-16.md  2023-07-28.md  2023-07-30.md  2023-08-13.md  2023-09-16.md  2023-10-01.md  2023-11-13.md  2023-12-09.md  2024-09-28.md  2024-10-14.md  2024-11-23.md
web/briefs/: 2023-07-02.md  2023-07-06.md  2023-07-13.md  2023-07-16.md  2023-07-28.md  2023-07-30.md  2023-08-13.md  2023-08-15.md  2023-09-16.md  2023-10-01.md  2023-11-13.md  2023-12-09.md  2024-09-28.md  2024-10-14.md  2024-11-23.md
web/static/: about.md  contact.md  credit.md  robots.txt  rss.xml
