[tool.poetry]
name = "blog"
version = "0.1.0"
description = "My personal blog"
authors = ["Michel Lavoie <lavoie.michel@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.9.19"
click = "8.1.6"
dataset = "1.6.2"
feedgen = "0.9.0"
nbconvert = "7.7.3"
nicegui = "1.3.9"
openai = "0.27.8"
pre-commit = "3.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
